// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 300,
      "padding": 24,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginBottom": 100,
        "paddingHorizontal": 24,
      }
    }
    testID="caller-info-toggle"
  >
    <View
      style={
        {
          "marginBottom": 16,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="bob.burnquist's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 2,
              "height": 120,
              "width": 120,
            },
            undefined,
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={2}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={120}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/bob.burnquist?format=png&size=240",
              },
            ]
          }
          style={
            {
              "borderRadius": 2,
              "height": 120,
              "width": 120,
            }
          }
          transition={null}
          width={120}
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          [Function],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 24,
              "fontWeight": "700",
              "lineHeight": 32,
              "marginBottom": 4,
              "textAlign": "center",
            },
            {
              "color": "#2F343D",
            },
          ]
        }
        testID="caller-info-name"
      >
        Bob Burnquist
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: UsernameOnly should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 300,
      "padding": 24,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginBottom": 100,
        "paddingHorizontal": 24,
      }
    }
    testID="caller-info-toggle"
  >
    <View
      style={
        {
          "marginBottom": 16,
          "position": "relative",
        }
      }
    >
      <View
        accessibilityLabel="john.doe's avatar"
        accessible={true}
        style={
          [
            {
              "borderRadius": 2,
              "height": 120,
              "width": 120,
            },
            undefined,
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderRadius={2}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={120}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=240",
              },
            ]
          }
          style={
            {
              "borderRadius": 2,
              "height": 120,
              "width": 120,
            }
          }
          transition={null}
          width={120}
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          [Function],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 24,
              "fontWeight": "700",
              "lineHeight": 32,
              "marginBottom": 4,
              "textAlign": "center",
            },
            {
              "color": "#2F343D",
            },
          ]
        }
        testID="caller-info-name"
      >
        john.doe
      </Text>
    </View>
  </View>
</View>
`;
